UtahLiveDataTest/src/objects/NAICSCode__c.object
<CustomObject>
    <description>[Business] NAICS code used in Award Setup</description>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MST: NAICS Code</label>
    <nameField>
        <label>NAICS Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAICS Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>